zeit.wysiwyg changes
====================

1.39.2 (unreleased)
-------------------

- ``<image>`` tages are not longer inside of a ``<p>``. That is there is no way
  to create those images with the WYSIWYG editor and any such image encountered
  is automatically migrated (#8158)

- Put out related list as ``<relateds/>`` as it was supposed to be (#8066).


1.39.1 (2010-08-09)
-------------------

- Removed pointles selenium test (#7549).


1.39.0 (2010-06-09)
-------------------

- Add video-uniqueId to XML (#7381).


1.38.1 (2010-06-03)
-------------------

- A Video might have expires==None


1.38.0 (2010-06-02)
-------------------

- Removed support for ``article_extra`` (#5935).
- Take expires from video object if user entered no value (#7028).


1.37.1 (2010-04-14)
-------------------

- Anlegen von Playlisten funktioniert wieder (#7077).


1.37.0 (2010-04-12)
-------------------

- Using versions from the ZTK.

- Using object browser to select videos (#6912).


1.36.0 (2010-03-10)
-------------------

- Tabelle und Anker entfernt (#6878).


1.35.0 (2009-12-18)
-------------------

- Wenn Bilder referenziert werden, wird der Artikel aktualisiert, wenn die
  Bilder sich ändern (#6254).
- Unbekannte Tags werden nicht ins HTML übertragen (#6678).


1.34.0 (2009-11-25)
-------------------

- Fehlerhaftes Markup im Raw-Block wird repariert (#6430).


1.33.0 (2009-11-02)
-------------------

- Es gibt jetzt einen einfachen Weg das Artikel-Bild aus der einem Artikel
  zugewiesenen Bildergruppe einzubinden (#6108).


1.32.2 (2009-10-06)
-------------------

- DeprecationWarning (ISite) entfernt.

- Kleine Rechtschreibkorrekturen.


1.32.1 (2009-09-06)
-------------------

- Tests angepasst für Änderungen am Kern.


1.32 (2009-09-03)
-----------------

- Player (vid/pls) bei Video (#6151)

- Layout-Eigenschaft »Hochkant« für Bilder (#6172).

1.31.2 (2009-08-29)
-------------------

- URL zum FCKEditor repariert.


1.31.1 (2009-08-29)
-------------------
